--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <a class="ms-1 h6 text-decoration-none fw-bold fs-7 mb-0 text-secondary">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 mb-0" href="#">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 mb-0" href="index-ar.html">AR</a>
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
             </div>
             <a class="ms-1 h6 text-decoration-none fw-bold fs-7 mb-0 text-secondary">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 mb-0" href="#">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 mb-0" href="index-ar.html">AR</a>
           </div>
         </div>
 
