--- a/index-ar.html
+++ b/index-ar.html
@@ -61,7 +61,7 @@
                 <div class="">
                   <img src="assets/img/icon/web.svg" alt="Language Icon">
                 </div>
-                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="#">EN</a>
+                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="/">EN</a>
                 <span class="d-inline-block lang-divider"></span>
                 <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
               </div>
@@ -84,7 +84,7 @@
             <div class="">
               <img src="assets/img/icon/web.svg" alt="Language Icon">
             </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="#">EN</a>
+            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="/">EN</a>
             <span class="d-inline-block lang-divider"></span>
             <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
           </div>
