--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="pt-4 pb-3 pt-md-5 pb-md-4">
           <h2 class="text-uppercase">Download our <br><strong class="text-animate">patient brochure</strong><br>to find out more<br>about hyperhidrosis</h2>
         </div>
-        <a class="btn btn-lg px-4 btn-dark fw-bold fs-2" href="#">DOWNLOAD</a>
+        <a class="btn btn-lg px-4 btn-dark fw-bold fs-2" href="assets/pdf/bts-brochure.pdf" target="_blank">DOWNLOAD</a>
       </div>
     </div>
   </div>
