--- a/index-ar.html
+++ b/index-ar.html
@@ -131,7 +131,7 @@
         <div class="pt-4 pb-3 pt-md-5 pb-md-4">
           <h2 class="text-uppercase">قم بتنزيــــــل <br><strong class="text-animate">كتيــــب المريـــض</strong><br>لمعرفـــــة المزيــــــد<br>عن فـــــــرط التعـــــــرّق</h2>
         </div>
-        <a class="btn btn-lg px-4 btn-dark fw-bold fs-2" href="#">تحميـــــــــل</a>
+        <a class="btn btn-lg px-4 btn-dark fw-bold fs-2" href="assets/pdf/bts-brochure.pdf" target="_blank">تحميـــــــــل</a>
       </div>
     </div>
   </div>
