--- a/index-ar.html
+++ b/index-ar.html
@@ -26,7 +26,7 @@
   <div class="container-fluid container-xl">
     <div class="row d-flex justify-content-center align-items-center">
       <div class="col-3 col-lg-2">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="index-ar.html">
           <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
