--- a/index-ar.html
+++ b/index-ar.html
@@ -157,7 +157,7 @@
       </div>
 
       <div class="col-md-4 text-md-end">
-        <a href="/">
+        <a href="index-ar.html">
           <img class="tagline-logo" src="assets/img/logo/logo-bts-ar-w.svg" alt="BEAT THE SWEAT">
         </a>
       </div>
