--- a/en/diagnosis.html
+++ b/en/diagnosis.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2531"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=13511"/>
   </head>
   <body>
 
@@ -114,177 +114,70 @@
   <span class="sidebar-overlay"></span>
 </nav>
 
-<main class="page-content home">
+<main class="page-content">
 
-  <section class="pt-0">
-    <div class="video-full-width-fixed">
-  <div class="video-block position-relative">
-    <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
-      <source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
-    </video>
+  <section class="py-0 description-highlight-bg" id="about">
+    <div class="container-fluid">
+  <div class="row d-flex justify-content-center align-items-center diagnosis-main-bg">
+    <div class="col-lg-8">
 
-    <div id="videoPlayPause" class="control-icons">
-    </div>
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-10 py-5">
+          <h2 class="h1 fw-bold display-4 text-animate pb-2">DIAGNOSIS</h2>
 
-    <div id="videoMute" class="control-icons mute">
-    </div>
 
-    <div id="videoExpand" class="control-icons">
-    </div>
+            <p class="fs-4 mb-2 fw-bold">Symptoms</p>
+            <p>Severe primary axillary hyperhidrosis (underarm sweating)  is usually diagnosed when a person has experienced at least 6 months of excessive underarm sweating (with no known cause) and also has at least two other characteristics listed below:<sup>1</sup></p>
+            <ul class="custom-icon-list list-icon-1">
+              <li>Both underarms are affected.</li>
+              <li>Daily activities are impaired.</li>
+              <li>Occurs at least once a week.</li>
+              <li>Age of onset (first experience) less than 25 years.</li>
+              <li>Family history of excessive sweating.</li>
+              <li>Excessive sweating does not happen during sleep.</li>
+            </ul>
+            <p class="fs-4 mb-2 fw-bold">Tests</p>
+            <p>You may need one or more tests to help pinpoint what’s causing your body to sweat too much. Blood or urine tests may confirm or rule out an underlying medical condition. Your doctor also may recommend a test to measure how much sweat your body produces.</p>
 
-  </div>
-  <a class="arrow-down-animate js-scroll-trigger" href="en#visual">
-    <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
-  </a>
-</div>
-  </section>
-  <section class="py-0 position-relative">
-    <div id="visual" class="add-full-vh bg-dark position-relative">
-
-  <div class="container-fluid">
-    <div class="row d-flex align-items-center justify-content-center">
-      <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
-        <div class="text-typing-block">
-          <p class="font-en text-white pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="position-relative">
-    <div class="swiper-button-prev"></div>
-    <div class="swiper models-carousel">
-      <div class="swiper-wrapper">
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-                        <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
+            <div class="d-flex justify-content-start">
+              <div class="pe-2">
+                <img width="50" src="assets/img/icon/diagnosis/starch-icon.svg" alt="starch icon">
               </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="campaign-visual-floating-logo">
-      <img src="assets/img/logo/logo-bts.svg" alt="BEAT THE SWEAT">
-    </div>
-  </div>
-
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-light py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">65%</span>
+              <p class="fs-5 mb-2 fw-bold">STARCH-IODINE TEST:</p>
             </div>
-          </div>
+            <p>Your doctor applies an iodine solution to the sweaty area and sprinkles starch over the iodine solution. Where you have excess sweating, the solution turns dark blue.</p>
+            <div class="d-flex justify-content-start">
+              <div class="pe-2">
+                <img width="50" src="assets/img/icon/diagnosis/paper-icon.svg" alt="paper icon">
+              </div>
+              <p class="fs-5 mb-2 fw-bold">PAPER TEST:</p>
+            </div>
+            <p>Your doctor places special paper on the affected area to absorb sweat. Later, your provider weighs the paper to determine how much you have sweated.<sup>2</sup></p>
 
-                      <p class="h3 pt-3 text-start">the most commonly reported body area where hyperhidrosis occurs is the underarms.</p>
 
         </div>
       </div>
+
     </div>
-    <div class="col-md-4 bg-white py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">3%</span>
-            </div>
-          </div>
-                      <p class="h3 pt-3 text-start">of the general population -about <strong>365 MILLION PEOPLE</strong> worldwide- experience excessive sweating (hyperhidrosis).<sup>1,2</sup></p>
-                  </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-dark text-light py-5 bg-gender">
-      <div>
-        <div class="row d-flex justify-content-center py-md-5">
-          <div class="col-10">
-                          <p class="h2 pb-3">Affecting both <br><strong>MEN & WOMEN</strong><br>equally.<sup>1</sup></p>
-                      </div>
-        </div>
-      </div>
+    <div class="col-lg-4">
+
     </div>
   </div>
 </div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/causes" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-1.png" alt="Model 1">
-            <span class="h2 fw-bold text-dark pt-3 d-block">CAUSES OF<br>HYPERHIDROSIS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-light py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/how-to-treat#treatment_options" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-2.png" alt="Model 2">
-            <span class="h2 fw-bold text-dark pt-3 d-block">TREATMENT<br>OPTIONS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/lifestyle-tips" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-3.png" alt="Model 3">
-            <span class="h2 fw-bold text-dark pt-3 d-block">LIFE STYLE<br>TIPS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="d-flex d-lg-none">
+  <img class="w-100" src="assets/img/banners/diagnosis-section.jpg" alt="BEAT THE SWEAT">
 </div>
   </section>
   <section class="bg-white py-0 position-relative reference-bg">
     <div class="container-fluid">
   <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xl-11">
+    <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
           <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
           <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
+            <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286.</li>
+            <li><a class="text-dark" href="https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests" target="_blank">https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests</a> last accessed (Feb 2023).</li>
           </ol>
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
@@ -345,14 +238,12 @@
 
 </footer>
 
-  <div class="preloader">
-  </div>
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2531" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=13511" charset="utf-8"></script>
 </body>
 </html>
