--- a/en/causes.html
+++ b/en/causes.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2531"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=11988"/>
   </head>
   <body>
 
@@ -114,177 +114,79 @@
   <span class="sidebar-overlay"></span>
 </nav>
 
-<main class="page-content home">
+<main class="page-content">
 
-  <section class="pt-0">
-    <div class="video-full-width-fixed">
-  <div class="video-block position-relative">
-    <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
-      <source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
-    </video>
-
-    <div id="videoPlayPause" class="control-icons">
-    </div>
-
-    <div id="videoMute" class="control-icons mute">
-    </div>
-
-    <div id="videoExpand" class="control-icons">
-    </div>
-
-  </div>
-  <a class="arrow-down-animate js-scroll-trigger" href="en#visual">
-    <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
-  </a>
-</div>
-  </section>
-  <section class="py-0 position-relative">
-    <div id="visual" class="add-full-vh bg-dark position-relative">
-
-  <div class="container-fluid">
-    <div class="row d-flex align-items-center justify-content-center">
-      <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
-        <div class="text-typing-block">
-          <p class="font-en text-white pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="position-relative">
-    <div class="swiper-button-prev"></div>
-    <div class="swiper models-carousel">
-      <div class="swiper-wrapper">
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-                        <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-              </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="campaign-visual-floating-logo">
-      <img src="assets/img/logo/logo-bts.svg" alt="BEAT THE SWEAT">
-    </div>
-  </div>
-
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
+  <section class="py-0 bg-secondary-bottom" id="about">
     <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-light py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">65%</span>
-            </div>
-          </div>
+  <div class="row d-flex justify-content-center align-items-center causes-rounded-main-bg">
+    <div class="col-lg-8">
 
-                      <p class="h3 pt-3 text-start">the most commonly reported body area where hyperhidrosis occurs is the underarms.</p>
-
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">3%</span>
-            </div>
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-10 py-5">
+          <div class="d-flex">
+            <h1 class="h2 fw-bold display-4 text-animate pb-2">CAUSES</h1>
+            <span class="fw-bold">1</span>
           </div>
-                      <p class="h3 pt-3 text-start">of the general population -about <strong>365 MILLION PEOPLE</strong> worldwide- experience excessive sweating (hyperhidrosis).<sup>1,2</sup></p>
-                  </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-dark text-light py-5 bg-gender">
-      <div>
-        <div class="row d-flex justify-content-center py-md-5">
-          <div class="col-10">
-                          <p class="h2 pb-3">Affecting both <br><strong>MEN & WOMEN</strong><br>equally.<sup>1</sup></p>
+                      <p class="mb-1">It is difficult to say how many people have excessive sweating. Many people never see a doctor. Some are too embarrassed to talk with a doctor. Others do not realize that this is a treatable medical condition. Researchers have learned that most people have one of the following:</p>
+
+          <div class="row d-flex justify-content-center align-items-start pt-3">
+                          <div class="col-6 col-md-3 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
+                <div class="causes-rounded-block shadow fw-bold fs-7 ">
+                  <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
+                    <img class="h-25" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
+                  </span>
+                  <span>Medicine or food supplement that can cause excessive sweating.</span>
+                </div>
+                <div class="causes-rounded-block-body fs-8 ">
+                  Certain medications – including some antidepressants, propranolol, pilocarpine, and bethanechol, can cause excessive sweating.<sup>1,2</sup>
+                </div>
+              </div>
+                          <div class="col-6 col-md-3 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
+                <div class="causes-rounded-block shadow fw-bold fs-7 block-light">
+                  <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
+                    <img class="h-25" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
+                  </span>
+                  <span>Medical condition that causes the sweating.</span>
+                </div>
+                <div class="causes-rounded-block-body fs-8 block-light">
+                  Many medical conditions can cause excessive sweating. These include diabetes and gout.<br>A tumour or injury also can cause excessive sweating.<br>Women often sweat excessively when they get hot flashes during menopause. The cause is obvious. Some women, however, develop excessive sweating after they have gone through menopause. This sweating does not have an obvious cause.<sup>1,2</sup>
+                </div>
+              </div>
+                          <div class="col-6 col-md-3 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-center lh-1 align-items-center flex-column pb-3">
+                <div class="causes-rounded-block shadow fw-bold fs-7 ">
+                  <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
+                    <img class="h-25" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
+                  </span>
+                  <span>Family member who sweats excessively.</span>
+                </div>
+                <div class="causes-rounded-block-body fs-8 ">
+                  When the excessive sweating occurs in one or two areas of the body, it is likely that a family member also has this condition.<sup>1,2</sup>
+                </div>
+              </div>
                       </div>
         </div>
       </div>
+
+    </div>
+    <div class="col-lg-4">
+
     </div>
   </div>
 </div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/causes" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-1.png" alt="Model 1">
-            <span class="h2 fw-bold text-dark pt-3 d-block">CAUSES OF<br>HYPERHIDROSIS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-light py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/how-to-treat#treatment_options" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-2.png" alt="Model 2">
-            <span class="h2 fw-bold text-dark pt-3 d-block">TREATMENT<br>OPTIONS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/lifestyle-tips" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-3.png" alt="Model 3">
-            <span class="h2 fw-bold text-dark pt-3 d-block">LIFE STYLE<br>TIPS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="d-flex d-lg-none">
+  <img class="w-100" src="assets/img/banners/causes-section.png" alt="BEAT THE SWEAT">
 </div>
   </section>
   <section class="bg-white py-0 position-relative reference-bg">
     <div class="container-fluid">
   <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xl-11">
+    <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
           <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
           <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
+            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes</a> last accessed (May 2023)</li>
+            <li>Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
           </ol>
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
@@ -345,14 +247,12 @@
 
 </footer>
 
-  <div class="preloader">
-  </div>
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2531" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=11988" charset="utf-8"></script>
 </body>
 </html>
