--- a/en/faqs.html
+++ b/en/faqs.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2531"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=27585"/>
   </head>
   <body>
 
@@ -114,191 +114,72 @@
   <span class="sidebar-overlay"></span>
 </nav>
 
-<main class="page-content home">
+<main class="page-content">
 
-  <section class="pt-0">
-    <div class="video-full-width-fixed">
-  <div class="video-block position-relative">
-    <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
-      <source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
-    </video>
-
-    <div id="videoPlayPause" class="control-icons">
-    </div>
-
-    <div id="videoMute" class="control-icons mute">
-    </div>
-
-    <div id="videoExpand" class="control-icons">
-    </div>
-
-  </div>
-  <a class="arrow-down-animate js-scroll-trigger" href="en#visual">
-    <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
-  </a>
-</div>
-  </section>
-  <section class="py-0 position-relative">
-    <div id="visual" class="add-full-vh bg-dark position-relative">
+  <section class="pt-lg-0" id="about">
+    <div id="visual" class="add-full-vh position-relative">
 
   <div class="container-fluid">
     <div class="row d-flex align-items-center justify-content-center">
       <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
+        <img class="w-100" src="assets/img/logo/bts-b.svg" alt="BEAT THE SWEAT" />
         <div class="text-typing-block">
-          <p class="font-en text-white pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
+          <p class="font-en pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
         </div>
       </div>
     </div>
-  </div>
+    <div class="row d-flex align-items-center justify-content-center pt-3">
+      <div class="col-12 col-md-10 col-xl-10 col-xxl-8">
 
-  <div class="position-relative">
-    <div class="swiper-button-prev"></div>
-    <div class="swiper models-carousel">
-      <div class="swiper-wrapper">
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-                        <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-              </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="campaign-visual-floating-logo">
-      <img src="assets/img/logo/logo-bts.svg" alt="BEAT THE SWEAT">
-    </div>
-  </div>
+        <div class="accordion accordion-flush" id="accordionFlushFaqs" dir="ltr">
 
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-light py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">65%</span>
-            </div>
-          </div>
-
-                      <p class="h3 pt-3 text-start">the most commonly reported body area where hyperhidrosis occurs is the underarms.</p>
-
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">3%</span>
-            </div>
-          </div>
-                      <p class="h3 pt-3 text-start">of the general population -about <strong>365 MILLION PEOPLE</strong> worldwide- experience excessive sweating (hyperhidrosis).<sup>1,2</sup></p>
-                  </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-dark text-light py-5 bg-gender">
-      <div>
-        <div class="row d-flex justify-content-center py-md-5">
-          <div class="col-10">
-                          <p class="h2 pb-3">Affecting both <br><strong>MEN & WOMEN</strong><br>equally.<sup>1</sup></p>
-                      </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/causes" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-1.png" alt="Model 1">
-            <span class="h2 fw-bold text-dark pt-3 d-block">CAUSES OF<br>HYPERHIDROSIS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-light py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/how-to-treat#treatment_options" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-2.png" alt="Model 2">
-            <span class="h2 fw-bold text-dark pt-3 d-block">TREATMENT<br>OPTIONS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/lifestyle-tips" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-3.png" alt="Model 3">
-            <span class="h2 fw-bold text-dark pt-3 d-block">LIFE STYLE<br>TIPS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative reference-bg">
-    <div class="container-fluid">
-  <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xl-11">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
-          </ol>
-        </div>
-        <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
-          <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-6 col-md-8 col-lg-8 col-xl-6 py-md-5">
-              <div class="logo-block py-5 my-xl-5 opacity-lg-0">
-                <img class="w-100" src="assets/img/logo/logo-b.svg" alt="BEAT THE SWEAT">
+                      <div class="accordion-item mb-1 border-0">
+              <h2 class="accordion-header">
+                <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  <span class="text-white fs-4">Can I self-diagnose hyperhidrosis?</span>
+                </button>
+              </h2>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body"> ---- </div>
               </div>
             </div>
-          </div>
+                      <div class="accordion-item mb-1 border-0">
+              <h2 class="accordion-header">
+                <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse1" aria-expanded="false" aria-controls="flush-collapse1">
+                  <span class="text-white fs-4">How common is hyperhidrosis?</span>
+                </button>
+              </h2>
+              <div id="flush-collapse1" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body"> ---- </div>
+              </div>
+            </div>
+                      <div class="accordion-item mb-1 border-0">
+              <h2 class="accordion-header">
+                <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse2" aria-expanded="false" aria-controls="flush-collapse2">
+                  <span class="text-white fs-4">Is sweating normal?</span>
+                </button>
+              </h2>
+              <div id="flush-collapse2" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body"> ---- </div>
+              </div>
+            </div>
+                      <div class="accordion-item mb-1 border-0">
+              <h2 class="accordion-header">
+                <button class="rounded-4 accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse3" aria-expanded="false" aria-controls="flush-collapse3">
+                  <span class="text-white fs-4">What are the symptoms of hyperhidrosis?</span>
+                </button>
+              </h2>
+              <div id="flush-collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body"> ---- </div>
+              </div>
+            </div>
+
         </div>
+
       </div>
     </div>
   </div>
+
 </div>
   </section>
 
@@ -345,14 +226,12 @@
 
 </footer>
 
-  <div class="preloader">
-  </div>
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2531" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=27585" charset="utf-8"></script>
 </body>
 </html>
