--- a/en/lifestyle-tips.html
+++ b/en/lifestyle-tips.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2531"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=16462"/>
   </head>
   <body>
 
@@ -114,161 +114,109 @@
   <span class="sidebar-overlay"></span>
 </nav>
 
-<main class="page-content home">
+<main class="page-content">
 
-  <section class="pt-0">
-    <div class="video-full-width-fixed">
-  <div class="video-block position-relative">
-    <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
-      <source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
-    </video>
+  <section class="py-0 life-style-bg" id="treatment_options">
+    <div class="container-fluid">
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-xl-10 col-12 py-5">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-lg-12">
+          <div class="d-flex">
+            <h1 class="d-inline-block h2 fw-bold display-5 text-white">LIFE STYLE TIPS</h1>
+          </div>
+        </div>
+        <div class="col-12 py-md-5 my-md-5">
 
-    <div id="videoPlayPause" class="control-icons">
-    </div>
-
-    <div id="videoMute" class="control-icons mute">
-    </div>
-
-    <div id="videoExpand" class="control-icons">
-    </div>
-
-  </div>
-  <a class="arrow-down-animate js-scroll-trigger" href="en#visual">
-    <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
-  </a>
-</div>
-  </section>
-  <section class="py-0 position-relative">
-    <div id="visual" class="add-full-vh bg-dark position-relative">
-
-  <div class="container-fluid">
-    <div class="row d-flex align-items-center justify-content-center">
-      <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
-        <div class="text-typing-block">
-          <p class="font-en text-white pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="position-relative">
-    <div class="swiper-button-prev"></div>
-    <div class="swiper models-carousel">
-      <div class="swiper-wrapper">
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-                        <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
+</div>
+  </section>
+  <section class="py-0 bg-disease-bottom" id="about">
+    <div class="container-fluid">
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-xl-10 col-12 py-5">
+      <div class="row d-flex justify-content-center align-items-start">
+        <div class="col-lg-6">
+          <div class="row d-flex justify-content-center align-items-start">
+            <div class="col-4">
+              <div class="d-flex justify-content-center">
+                <h1 class="h2 fw-bold display-6 text-animate pb-2">DOs</h1>
+                <span class="fw-bold">1</span>
               </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="campaign-visual-floating-logo">
-      <img src="assets/img/logo/logo-bts.svg" alt="BEAT THE SWEAT">
-    </div>
-  </div>
+              <div class="text-center">
+                <img height="120" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
+              </div>
+            </div>
+            <div class="col-8">
 
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-light py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">65%</span>
+                              <ul class="custom-icon-list list-icon-2">
+                  <li>Wear loose-fitting clothes to minimise signs of sweating.</li>
+                  <li>Wear socks that absorb moisture and change your socks at least twice a day if possible.</li>
+                  <li>Wear leather shoes and try to wear different shoes day to day.</li>
+                </ul>
+
             </div>
           </div>
-
-                      <p class="h3 pt-3 text-start">the most commonly reported body area where hyperhidrosis occurs is the underarms.</p>
-
         </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">3%</span>
+        <div class="col-lg-6 pt-4 pt-lg-0">
+          <div class="row d-flex justify-content-center align-items-start">
+            <div class="col-4">
+              <div class="d-flex justify-content-center">
+                <h1 class="h2 fw-bold display-6 text-animate pb-2">DON'Ts</h1>
+                <span class="fw-bold">1</span>
+              </div>
+              <div class="text-center">
+                <img height="120" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
+              </div>
+            </div>
+            <div class="col-8">
+
+                              <ul class="custom-icon-list list-icon-2">
+                  <li>Do not wear tight clothes or synthetic fabrics – for example, nylon.</li>
+                  <li>Do not wear enclosed boots or sports shoes that may cause your feet to sweat more.</li>
+                  <li>Do not do things that might make your sweating worse – for example, drinking alcohol or eating spicy food.</li>
+                </ul>
+
             </div>
           </div>
-                      <p class="h3 pt-3 text-start">of the general population -about <strong>365 MILLION PEOPLE</strong> worldwide- experience excessive sweating (hyperhidrosis).<sup>1,2</sup></p>
-                  </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-dark text-light py-5 bg-gender">
-      <div>
-        <div class="row d-flex justify-content-center py-md-5">
-          <div class="col-10">
-                          <p class="h2 pb-3">Affecting both <br><strong>MEN & WOMEN</strong><br>equally.<sup>1</sup></p>
-                      </div>
         </div>
       </div>
     </div>
   </div>
 </div>
   </section>
-  <section class="bg-white py-0 position-relative">
+  <section class="pt-3 pb-0" id="about">
     <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/causes" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-1.png" alt="Model 1">
-            <span class="h2 fw-bold text-dark pt-3 d-block">CAUSES OF<br>HYPERHIDROSIS</span>
-          </a>
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-xl-10 col-12 pt-5">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-lg-12">
+          <div class="d-flex">
+            <h1 class="d-inline-block h2 fw-bold display-5 text-animate">HOME REMEDIES.</h1>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-4 bg-light py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/how-to-treat#treatment_options" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-2.png" alt="Model 2">
-            <span class="h2 fw-bold text-dark pt-3 d-block">TREATMENT<br>OPTIONS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/lifestyle-tips" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-3.png" alt="Model 3">
-            <span class="h2 fw-bold text-dark pt-3 d-block">LIFE STYLE<br>TIPS</span>
-          </a>
+  </div>
+</div>
+    <div class="container-fluid">
+  <div class="row d-flex justify-content-center align-items-center bg-disease-bottom-full">
+    <div class="col-xl-10 col-12 pt-3">
+      <div class="row">
+        <div class="col-lg-12 pb-5">
+
+                      <p class="fs-4 mb-2 fw-bold">Iontophoresis.<sup>2</sup></p>
+            <p>With this home treatment, you soak your hands or feet in a pan of water while a device passes mild electric current through the water. The electric current blocks the nerves that trigger sweating. You can buy the device if you have a prescription from your health care provider.</p>
+            <p>You'll need to soak the affected areas for 20 to 40 minutes. use the device as per your treating physician’s advise.<sup>1</sup></p>
+
+          <div class="row d-flex justify-content-center align-items-center py-3 py-md-4">
+            <div class="col-xxl-6 col-xl-8 col-lg-8 col-md-9 col-sm-10">
+              <img width="w-100" src="assets/img/banners/home-remedies-animate.svg" alt="home remedies">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -278,13 +226,13 @@
   <section class="bg-white py-0 position-relative reference-bg">
     <div class="container-fluid">
   <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xl-11">
+    <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
           <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
           <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
+            <li><a class="text-dark" href="https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/" target="_blank">https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/</a> last accessed May 23.</li>
+            <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed May 23.</li>
           </ol>
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
@@ -345,14 +293,12 @@
 
 </footer>
 
-  <div class="preloader">
-  </div>
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2531" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=16462" charset="utf-8"></script>
 </body>
 </html>
